# yurei

./: .clang-format  .gitignore  CMakeLists.txt  README.md  assembler.cpp  assembler.h  build.ps1  build.sh  isa.cpp  isa.h  jaskASM.cpp  jaskASM.h  memory.cpp  memory.h  runtime.cpp  runtime.h  test.j16
.github/workflows/: c-cpp.yml  cmake.yml
device/: device.h  gamepad.cpp  gamepad.h
include/j16/: assembler.h  device.h  gamepad.h  isa.h  j16.h  log.h  memory.h  runtime.h  screen.h  sysinfo.h  yurei.h
other/: custom_processor.vlg  gen.py  mem.v  oni16.v
qt/: CMakeLists.txt
src/: assembler.cpp  gamepad.cpp  isa.cpp  jaskASM.cpp  log.cpp  memory.cpp  runtime.cpp  yurei.cpp
src/device/: device.cpp  gamepad.cpp
src/j16/: j16ps.cpp  runtime.cpp
src/j16asm/: assembler.cpp  j16asm.cpp
test/: out.j16  test.jsrc
utility/: log.cpp  log.h  sysinfo.h
